# thisel

./: Cargo.toml  README.md
resources/: grammar.json
src/: app.rs  auto_complete.rs  dispatcher.rs  editor.rs  executor.rs  lib.rs  regex.rs  runner.rs  session.rs  session_source.rs  solidity_helper.rs  ui.rs
