[package]
name = "chisel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-dyn-abi = "0.6.4"
alloy-json-abi = "0.6.4"
alloy-primitives = "0.6.4"
ansi-to-tui = "4.0.1"
clap = "4.5.4"
crossterm = "0.27.0"
dirs = "5.0.1"
eyre = "0.6.12"
forge-fmt = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
foundry-compilers = "0.3.13"
foundry-config = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", version = "0.2.0" }
multimap = "0.10.0"
once_cell = "1.19.0"
ratatui = "0.26.1"
regex = "1.10.4"
reqwest = {version = "0.12.2", default-features = false, features=["json"]}
revm = "7.2.0"
rustyline = "14.0.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
solang-parser = "0.3.3"
strum = "0.26.2"
time = { version = "0.3.34", features = ["formatting"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
tui-textarea = "0.4.0"
yansi = "1.0.1"

[[bin]]
name = "thisel"
path = "bin/main.rs"

[dev-dependencies]
clippy = "0.0.302"

